[package]
name = "managed-order-book"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
rust_decimal = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.130"

reqwest = { version = "0.12.3", features = [
    "json",
    "gzip",
    "deflate",
    "rustls-tls",
] }
tokio = { version = "1.40.0", features = ["full"] }
v = "0.1.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3.31"
prettytable = "0.10.0"
